# learning-lab

./: README.md
book/ansible-for-kubernetes/hello-ansible/: main.yml
book/ansible-for-kubernetes/hello-go-automation/: main.yml
graphql/ariadne_intro/: Makefile  README.rst  cli.py  pyproject.toml
graphql/ariadne_intro/ariadne_intro/: .gitignore  server.py
graphql/ariadne_intro/ariadne_intro/schema/: query_type.graphql  user_type.graphql
graphql/ariadne_intro/tests/: test_ariadne_intro.py
graphql/howtographql-graphene/: Makefile  README.rst  howto_graphql.postman_collection.json  pyproject.toml
graphql/howtographql-graphene/hackernews/: db.sqlite3
graphql/howtographql-graphene/hackernews/hackernews/: schema.py  settings.py
graphql/howtographql-graphene/hackernews/links/: models.py  schema.py
graphql/howtographql-graphene/hackernews/links/migrations/: 0001_initial.py  0002_link_posted_by.py  0003_vote.py
graphql/howtographql-graphene/hackernews/users/: schema.py
graphql/howtographql-graphene/tests/: test_howtographql_graphene.py
python/basics/: context_manager.py  decorator.py  generator_expression.py  getter_setter.py  helpers_bytes_strings.py  limit_password_attempts.py  list_comprehension.py  unicode.py  variable_arguments.py
python/morsels/: add.py  cars-original.csv  cars.csv  circle.py  compact.py  count.py  fix_csv.py  point.py  tail.py  test_fix_csv.py  test_point.py  test_tail.py
python/notebooks/: dictionaries.ipynb  sets.ipynb
python/qml/: app.py  app.qml
rust/hello_cargo/: Cargo.toml
rust/variables/: Cargo.toml
(+4 files in other folders)
