[tool.poetry]
name = "ariadne_intro"
version = "0.1.0"
description = ""
authors = ["Tomáš Bouška <tomas@buvis.net>"]

[tool.poetry.dependencies]
python = "^3.8"
ariadne = "^0.12.0"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
