[tool.poetry]
name = "howtographql-graphene"
version = "0.1.0"
description = ""
authors = ["Tomáš Bouška <tomas@buvis.net>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1"
graphene-django = "^2.13.0"
django-filter = "^2.3.0"
django-graphql-jwt = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
